project (native-webgl)
include_directories(${CMAKE_JS_INC})
file(GLOB SOURCE_FILES ./*.cpp)
add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})
set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ".node")
set_target_properties (${PROJECT_NAME} PROPERTIES CXX_STANDARD 17)
target_link_libraries(${PROJECT_NAME} ${CMAKE_JS_LIB})